# complianceshield

./: BACKLOG.md  DEMO-DAY-CHEATSHEET.md  DEMO-VERIFICATION-REPORT.md  FINAL-VALIDATION-REPORT.md  HACKATHON-SUMMARY.md  README.md  restart-all.sh
agents/buyer-simple-agent/: pyproject.toml
agents/buyer-simple-agent/src/: agent.py  autonomous_discovery.py  web.py
agents/seller-simple-agent/: .env.example  DEMO-SCRIPT.md  README.md  SUBMISSION.md  USER-BACKLOG.md  pyproject.toml
agents/seller-simple-agent/Plans/: calm-drifting-hare.md
agents/seller-simple-agent/docs/: YOUR-TODO-NOW.md  business-brief.md  demo-script.md
agents/seller-simple-agent/landing/: 404.html  api-docs.html  connect.html  dashboard.html  embed.html  getting-started.html  index.html  login.html  mobile.css  payments.html  pricing.html  regulations.html  reports.html  status.html
agents/seller-simple-agent/src/: agent.py  agent_a2a.py  mcp_server.py  pricing.py  setup.py  strands_agent.py  strands_agent_plain.py  telegram_bot.py  web_demo.py
agents/seller-simple-agent/src/tools/: compliance_check.py  youtube_transcript.py
docs/: API-REFERENCE.md  QUICK-START.md
